k8s/initial/02-mongodb-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
        app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:     
      containers:
        - name: mongodb
          ports:
            - containerPort: 27017
              protocol: TCP
          image: serdarkalayci/bookinfo-mongo:0.1
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
