k8s/initial/10-infoapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: infoapi
    layer: api
  name: infoapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infoapi
  template:
    metadata:
      labels:
        app: infoapi
    spec:
      containers:
      - image: serdarkalayci/bookinfo-info:1.1
        name: bookinfo-api
        ports:
        - containerPort: 5550
        volumeMounts:
          - name: api-livesettings
            mountPath: /go/bin/configuration
      restartPolicy: Always
      volumes:
        - name: api-livesettings
          configMap:
            name: api-livesettings
