k8s/initial/12-stockapi-deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stockapi
    layer: api
    version: "2"
  name: stockapi2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stockapi
      version: "2"
  template:
    metadata:
      labels:
        app: stockapi
        version: "2"
    spec:
      containers:
      - image: serdarkalayci/bookinfo-stock:1.2
        name: bookstock-api
        ports:
        - containerPort: 5555
        volumeMounts:
          - name: api-livesettings
            mountPath: go/bin/configuration
      restartPolicy: Always
      volumes:
        - name: api-livesettings
          configMap:
            name: api-livesettings
