k8s/initial/14-stockapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stockapi
    layer: api
  name: stockapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stockapi
  template:
    metadata:
      labels:
        app: stockapi
    spec:
      containers:
      - image: serdarkalayci/bookinfo-stock:2.1
        name: bookstock-api
        ports:
        - containerPort: 5555
        volumeMounts:
          - name: api-livesettings
            mountPath: go/bin/configuration
      restartPolicy: Always
      volumes:
        - name: api-livesettings
          configMap:
            name: api-livesettings
