k8s/initial/15-stockapi-deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stockapi
    layer: api
    version: "2"
  name: stockapi2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stockapi
      version: "2"
  template:
    metadata:
      labels:
        app: stockapi
        version: "2"
    spec:
      containers:
      - image: serdarkalayci/bookinfo-stock:2.2
        name: bookstock-api
        ports:
        - containerPort: 5555
        volumeMounts:
          - name: api-livesettings
            mountPath: /configuration
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 5555
            scheme: HTTP
          initialDelaySeconds: 3
          timeoutSeconds: 2
          periodSeconds: 3
          successThreshold: 1
          failureThreshold: 5
        livenessProbe:
            httpGet:
              path: /health/live
              port: 5555
              scheme: HTTP
            initialDelaySeconds: 3
            timeoutSeconds: 2
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 5
      restartPolicy: Always
      volumes:
        - name: api-livesettings
          configMap:
            name: api-livesettings
