k8s/initial/06-mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo-express
  name: mongo-express
spec:
  ports:
  - name: "web"
    port: 8081
    targetPort: 8081
  selector:
    app: mongo-express
