k8s/initial/13-infoapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: infoapi
    layer: api
  name: infoapi
spec:
  ports:
  - name: "web"
    port: 5550
    targetPort: 5550
  selector:
    app: infoapi
