k8s/initial/14-stockapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stockapi
    layer: api
  name: stockapi

spec:
  ports:
  - name: "web"
    port: 5555
    targetPort: 5555
  selector:
    app: stockapi
