k8s/initial/06-mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoexpress
spec:
  ingressClassName: nginx
  rules:
  - host: mexpress.localdev.me
    http:
      paths:
      - backend:
          service:
            name: mongo-express
            port:
              number: 8081
        path: /
        pathType: Prefix
